# atmrs

./: .replit  CMakeLists.txt  CMakeLists_arm64.txt  CMakeLists_final.txt  CMakeLists_headless.txt  CMakeLists_intel.txt  CMakeLists_macos_full.txt  CMakeLists_macos_only.txt  CMakeLists_macos_working.txt  CMakeLists_replit.txt  CMakeLists_replit_safe.txt  CMakeLists_simplified.txt  CMakeLists_universal.txt  README_ASSISTANT.md  build_arm64.sh  build_bundled_libs.sh  build_full_macos.sh  build_intel.sh  build_intel_fixed.sh  build_intel_force.sh  build_intel_only.sh  build_macos_only.sh  build_macos_with_onnx.sh  build_replit.sh  build_replit_full.sh  build_replit_macos_info.sh  build_replit_safe.sh  build_simple.sh  build_universal.sh  build_without_onnx.sh  check_arm64_libs.sh  check_system_info.sh  dependencies.txt  find_dependencies.sh  fix_arm64_libraries.sh  install_dependencies.sh  install_macos_dependencies.sh  mac_sync_helper.sh  replit.md  sync_to_mac.sh  (+1 more)
Models/: README.txt
Source/: AIModelLoader.cpp  AIModelLoader.h  JuceHeader.h  LookAndFeel.cpp  LookAndFeel.h  ModeSelector.cpp  ModeSelector.h  Parameters.cpp  Parameters.h  PitchCorrectionEngine.cpp  PitchCorrectionEngine.h  PluginEditor.cpp  PluginEditor.h  PluginEditor_minimal.cpp  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h  Utils.cpp  Utils.h
attached_assets/: Pasted--1-Building-CXX-object-CMakeFiles-AutoTunePlugin-dir-Source-PluginProcessor-cpp-o-3-Buildin-1755686402106_1755686402106.txt  Pasted--10-Building-CXX-object-CMakeFiles-AutoTunePlugin-dir-Source-ModeSelector-cpp-o-usr-bin-c-DJU-1755686632403_1755686632403.txt  Pasted--202-const-LLT-adjoint-const-EIGEN-NOEXCEPT-return-this--1755686515369_1755686515370.txt  Pasted--6-Building-CXX-object-CMakeFiles-AutoTunePlugin-dir-Source-PitchCorrectionEngine-cpp-o-usr-bin-1755687298894_1755687298895.txt  Pasted--6-Building-CXX-object-CMakeFiles-AutoTunePlugin-dir-Source-PluginEditor-cpp-o-usr-bin-c-DJU-1755686417763_1755686417763.txt  Pasted--7-Building-CXX-object-CMakeFiles-AutoTunePlugin-dir-Source-Parameters-cpp-o-usr-bin-c-DJUCE-1755686616090_1755686616090.txt  Pasted--GUI-DSP--1755669223952_1755669223953.txt  Pasted--Users-marselmacevans-Downloads-atmrs-Source-PitchCorrectionEngine-cpp-170-46-warning-implicit-con-1755687465824_1755687465825.txt  Pasted--Users-marselmacevans-Downloads-atmrs-Source-PitchCorrectionEngine-cpp-243-42-warning-implicit-con-1755686534922_1755686534922.txt  Pasted--Users-marselmacevans-Downloads-atmrs-Source-PitchCorrectionEngine-cpp-272-69-warning-implicit-con-1755684404487_1755684404487.txt  Pasted--Users-marselmacevans-Downloads-atmrs-Source-PitchCorrectionEngine-cpp-284-42-warning-comparison-o-1755678894819_1755678894820.txt  Pasted--Users-marselmacevans-Downloads-atmrs-Source-PitchCorrectionEngine-cpp-382-41-warning-implicit-con-1755680944984_1755680944985.txt  Pasted--Users-marselmacevans-Downloads-atmrs-Source-PitchCorrectionEngine-cpp-39-23-warning-implicit-conv-1755684431791_1755684431791.txt  Pasted--Users-marselmacevans-Downloads-atmrs-Source-PitchCorrectionEngine-cpp-401-27-warning-implicit-con-1755684335950_1755684335951.txt  Pasted--Users-marselmacevans-Downloads-atmrs-Source-PitchCorrectionEngine-cpp-402-28-warning-implicit-con-1755683931789_1755683931789.txt  Pasted--Users-marselmacevans-Downloads-atmrs-Source-PluginProcessor-cpp-18-72-warning-field-pluginParame-1755686557348_1755686557348.txt  Pasted--Users-marselmacevans-Downloads-atmrs-Source-PluginProcessor-cpp-188-36-warning-implicit-conversio-1755679308601_1755679308601.txt  Pasted--Users-marselmacevans-Downloads-atmrs-Source-PluginProcessor-cpp-22-59-error-cannot-initialize-a-p-1755679603796_1755679603796.txt  Pasted--Users-marselmacevans-Downloads-atmrs-Source-PluginProcessor-cpp-335-40-warning-implicit-conversio-1755678848489_1755678848490.txt  Pasted--Users-marselmacevans-Downloads-atmrs-build-deps-eigen3-src-Eigen-src-Core-IO-h-66-30-warning-imp-1755680856412_1755680856413.txt  Pasted--Users-marselmacevans-Downloads-atmrs-build-deps-eigen3-src-Eigen-src-Core-util-Memory-h-129-14-wa-1755680874435_1755680874435.txt  Pasted--Users-marselmacevans-Downloads-atmrs-build-deps-juce-src-modules-juce-audio-processors-processors--1755680962760_1755680962760.txt  Pasted--Users-marselmacevans-Downloads-atmrs-build-deps-kissfft-src-kiss-fftndr-c-59-10-warning-cast-fro-1755680839661_1755680839661.txt  Pasted--Users-marselmacevans-Downloads-atmrs-build-deps-onnxruntime-src-include-onnxruntime-c-api-h-284-42-1755680932811_1755680932812.txt  Pasted--Users-marselmacevans-Downloads-atmrs-build-deps-onnxruntime-src-include-onnxruntime-c-api-h-287-36-1755680904147_1755680904148.txt  Pasted--Users-marselmacevans-Downloads-atmrs-build-deps-onnxruntime-src-include-onnxruntime-cxx-api-h-516--1755680917772_1755680917773.txt  Pasted--Wl-weak-reference-mismatches-weak-usr-local-lib-libonnxruntime-dylib-usr-local-lib-librubberband-1755697393721_1755697393721.txt  Pasted--nullptr-usr-local-include-1755686455856_1755686455857.txt  Pasted--pluginParameters-Users-marselmacevans-Downloads-atmrs-Source-PitchCorrectionEngine-cp-1755687424772_1755687424772.txt  Pasted--usr-local-bin-cmake-E-cmake-link-script-CMakeFiles-AutoTunePlugin-VST3-dir-link-txt-verbose-1-u-1755698086099_1755698086099.txt  Pasted--usr-local-include-eigen3-Eigen-src-Core-arch-Default-Half-h-618-25-warning-implicit-conversion-ch-1755686436766_1755686436766.txt  Pasted--usr-local-include-eigen3-Eigen-src-Core-arch-NEON-TypeCasting-h-1105-32-warning-implicit-conversi-1755686581618_1755686581618.txt  Pasted--usr-local-include-eigen3-Eigen-src-Core-arch-SSE-Complex-h-72-77-warning-implicit-conversion-chan-1755684449228_1755684449228.txt  Pasted--usr-local-include-eigen3-Eigen-src-Core-arch-SSE-PacketMath-h-324-79-warning-implicit-conversion--1755684503927_1755684503927.txt  Pasted--usr-local-include-eigen3-Eigen-src-Core-arch-SSE-PacketMath-h-329-61-warning-implicit-conversion--1755684464933_1755684464933.txt  (+37 more)
build_full/: CMakeCache.txt  CMakeLists.txt
build_replit/: CMakeCache.txt  CMakeLists.txt
(+345 files in other folders)
